# checkpoint

./: README.md  pyproject.toml
docs/: instructor-guide.md
examples/: .gitignore  infoCourse.json
examples/questions/gdb-tutorial/: README.md  checkpoint.yaml
examples/questions/git-tutorial/: checkpoint.yaml
src/checkpoint/: __init__.py  cli.py  constants.py
src/checkpoint/builders/: Dockerfile.j2  docker.py  pl_server.py.template  question.html.j2  question.py
src/checkpoint/builders/templates/: config.py.j2  index.html  requirements.txt  server.py
src/checkpoint/models/: docker.py  question.py
